@@ -1,28 +1,26 @@
 package com.audrio.backendbakrie.service.impl;
 
-import com.audrio.backendbakrie.io.AuthResponse;
-import com.audrio.backendbakrie.io.CustomerAuthRequest;
-import com.audrio.backendbakrie.repository.CartRepository;
+import com.audrio.backendbakrie.events.EmailVerificationEvent;
+import com.audrio.backendbakrie.io.*;
 import com.audrio.backendbakrie.repository.CustomerRepository;
 import com.audrio.backendbakrie.entity.Customers;
-import com.audrio.backendbakrie.io.CustomerRequest;
-import com.audrio.backendbakrie.io.CustomerResponse;
 import com.audrio.backendbakrie.repository.RolesRepository;
 import com.audrio.backendbakrie.roles.Roles;
 import com.audrio.backendbakrie.service.CloudinaryService;
 import com.audrio.backendbakrie.service.CustomerService;
-import com.audrio.backendbakrie.service.EmailService;
 import com.audrio.backendbakrie.utils.Exceptions.*;
 import com.audrio.backendbakrie.utils.JwtUtils;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.util.*;
 
@@ -33,12 +31,11 @@ public class CustomerServiceImpl implements CustomerService {
 
     private final CustomerRepository customerRepository;
     private final CloudinaryService cloudinaryService;
-    private final EmailService emailService;
     private final PasswordEncoder passwordEncoder;
     private final JwtUtils jwtUtils;
     private final RolesRepository rolesRepository;
     private final AuthenticationManager authenticationManager;
-    private final CartRepository cartRepository;
+    private final ApplicationEventPublisher eventPublisher;
 
     @Override
     public CustomerResponse add(CustomerRequest request) {
@@ -68,7 +65,18 @@ public class CustomerServiceImpl implements CustomerService {
             log.info("Updating verification token for existing unverified user");
             existing.setVerificationToken(token);
             customerRepository.save(existing);
-            emailService.sendVerificationEmail(existing.getEmail(), token);
+
+            String verificationUrl2 = ServletUriComponentsBuilder.fromCurrentContextPath()
+                    .path("/req/signup/emp/verify")
+                    .queryParam("token", token)
+                    .toUriString();
+
+            eventPublisher.publishEvent(EmailVerificationEvent.builder()
+                    .email(existing.getEmail())
+                    .token(token)
+                    .verificationUrl(verificationUrl2)
+                    .build());
+
             log.info("Verification email resent to: {}", email);
             return convertToResponse(existing);
         }
@@ -79,10 +87,20 @@ public class CustomerServiceImpl implements CustomerService {
         newCustomer.setVerificationToken(token);
         newCustomer.setIs_verified(false);
 
-        newCustomer = customerRepository.save(newCustomer);
+        Customers saved = customerRepository.save(newCustomer);
         log.info("New customer saved with ID: {}", newCustomer.getIdCustomer());
 
-        emailService.sendVerificationEmail(newCustomer.getEmail(), token);
+        String verificationUrl = ServletUriComponentsBuilder.fromCurrentContextPath()
+                .path("/req/signup/emp/verify")
+                .queryParam("token", saved.getVerificationToken())
+                .toUriString();
+
+        // Kirim email verifikasi
+        eventPublisher.publishEvent(EmailVerificationEvent.builder()
+                .email(saved.getEmail())
+                .token(saved.getVerificationToken())
+                .verificationUrl(verificationUrl)
+                .build());
         log.info("Verification email sent to: {}", newCustomer.getEmail());
 
         log.info("ADD CUSTOMER SUCCESS");
@@ -91,46 +109,42 @@ public class CustomerServiceImpl implements CustomerService {
 
     @Override
     @Transactional
-    public CustomerResponse update(UUID id, CustomerRequest request, MultipartFile file) {
-        log.info("UPDATE CUSTOMER START | ID: {}", id);
-        log.debug("Update request: {}", request);
-
+    public CustomerResponse update(UUID id, UpdateProfileCusRequest request, MultipartFile file) {
         Customers customer = customerRepository.findById(id)
-                .orElseThrow(() -> {
-                    log.warn("Customer not found for update: {}", id);
-                    return new CustomerNotFoundException("Customer tidak ditemukan: " + id);
-                });
+                .orElseThrow(() -> new CustomerNotFoundException("Customer tidak ditemukan"));
 
-        log.debug("Validating file size and type");
-        if (file.getSize() > 5 * 1024 * 1024) {
-            log.warn("File too large: {} bytes", file.getSize());
-            throw new ImageSizeUnaproriateException("File maksimal 5MB");
-        }
-        if (!Objects.requireNonNull(file.getContentType()).startsWith("image/")) {
-            log.warn("Invalid file type: {}", file.getContentType());
-            throw new ImageInvalidExtentionException("Hanya file gambar");
-        }
-        String idImg = UUID.randomUUID().toString();
-        log.debug("Uploading image to Cloudinary with ID: {}", idImg);
-        String imgUrl = cloudinaryService.uploadFile(file, idImg).getUrl();
-        log.debug("Image uploaded successfully: {}", imgUrl);
-        if (imgUrl == null) {
-            log.warn("Image upload failed");
-        }
-        customer.setImg_url(imgUrl);
-        customer.setUsername(request.getUsername().trim());
-        customer.setEmail(request.getEmail().trim());
-        customer.setAddress(request.getAddress().trim());
-        customer.setPhone_num(request.getPhone_num().trim());
+        // Upload foto kalau ada file baru
+        if (file != null && !file.isEmpty()) {
+            if (file.getSize() > 5 * 1024 * 1024) {
+                throw new ImageSizeUnaproriateException("File maksimal 5MB");
+            }
+            if (!file.getContentType().startsWith("image/")) {
+                throw new ImageInvalidExtentionException("Hanya file gambar");
+            }
 
-        if (request.getPassword() != null && !request.getPassword().isBlank()) {
-            log.debug("Updating password for customer: {}", id);
+            String imgId = UUID.randomUUID().toString();
+            String imgUrl = cloudinaryService.uploadFile(file, imgId).getUrl();
+            customer.setImg_url(imgUrl);
+        }
+
+        // Update field lain (hanya yang diisi)
+        if (request.getUsername() != null && !request.getUsername().trim().isEmpty()) {
+            customer.setUsername(request.getUsername().trim());
+        }
+        if (request.getEmail() != null && !request.getEmail().trim().isEmpty()) {
+            customer.setEmail(request.getEmail().trim());
+        }
+        if (request.getAddress() != null && !request.getAddress().trim().isEmpty()) {
+            customer.setAddress(request.getAddress().trim());
+        }
+        if (request.getPhone_num() != null && !request.getPhone_num().trim().isEmpty()) {
+            customer.setPhone_num(request.getPhone_num().trim());
+        }
+        if (request.getPassword() != null && !request.getPassword().trim().isEmpty()) {
             customer.setPassword(passwordEncoder.encode(request.getPassword()));
         }
 
         customerRepository.save(customer);
-        log.info("Customer updated successfully: {}", id);
-        log.info("UPDATE CUSTOMER SUCCESS");
         return convertToResponse(customer);
     }
 
